--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -15,7 +15,7 @@ h6 {
 
 main {
   height: 100%;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 section {
   padding: 10px;
